--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,7 @@
 [theme]
+base="dark"
 #primaryColor="#F39C12"
 #backgroundColor="#2E86C1"
-#secondaryBackgroundColor="#AED6F1"
-#textColor="#FFFFFF"
+#secondaryBackgroundColor="gray"
+textColor="#FFFFFF"
 #font="monospace"
